# bellidus

./: .eslintcache  README.md
backend/: .env  .gitignore  db.sqlite3  pyproject.toml
backend/clients/: models.py
backend/clients/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/docker/: Dockerfile  docker-compose.yml
backend/marketplace/clients/: admin.py  apps.py
backend/marketplace/events/: apps.py
backend/marketplace/sellers/: apps.py
core/: pyproject.toml
frontend/: .eslintcache  LICENSE  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/our-story/: our-story-component.jsx  our-story.jsx
frontend/src/pages/Home/: Home.js
payment/: .gitignore  package-lock.json  package.json  pyproject.toml
