[tool.poetry]
name = "payment-backend"
version = "0.1.0"
description = "Payment Backend"
authors = ["Hector"]
license = "MIT"
readme = "README.md"
packages = [{include = "payment_backend"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
